--- a/hemoglobin_backend/requirements.txt
+++ b/hemoglobin_backend/requirements.txt
@@ -15,6 +15,7 @@ scikit-image==0.22.0
 opencv-python==4.8.1.78
 Pillow==10.1.0
 imageio==2.33.0
+mediapipe==0.10.9
 
 # Feature Extraction
 mahotas==1.4.13
