--- a/hemoglobin_backend/requirements-fixed.txt
+++ b/hemoglobin_backend/requirements-fixed.txt
@@ -7,6 +7,7 @@ pydantic-settings==2.1.0
 typing-extensions>=4.8.0
 
 # Machine Learning & Deep Learning
+ml-dtypes>=0.3.1
 tensorflow==2.15.0
 keras==2.15.0
 scikit-learn==1.3.2
